# qyh_jushen_backend

./: .env  .env.example  .gitignore  API_DOCUMENTATION.md  API_MIGRATION_MAPPING.md  API_REVIEW_REPORT.md  BACKEND_CODE_REVIEW_PLAN.md  BACKEND_CODE_REVIEW_REPORT.md  README.md  REFACTOR_PLAN.md  backend_audit_log.md  build_all.sh  requirements.txt  start.sh  重构.md  重构开发计划.md  重构补充.md
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: actions.py  arm.py  arm_points.py  auth.py  camera.py  chassis.py  control.py  emergency.py  gripper.py  head.py  head_points.py  lift.py  lift_points.py  preset.py  recording.py  robot.py  robot_model.py  ros_client.py  ros_gui.py  shutdown.py  status.py  task_orchestration.py  tasks.py  terminal.py  vr_teleoperation.py  waist.py  waist_points.py
app/core/: security.py
app/models/: __init__.py  user.py
app/preset/: __init__.py  manager.py
app/ros2_bridge/: __init__.py  bridge.py  joint_state_bridge.py
app/ros2_bridge/components/: __init__.py  arm.py  base.py  camera.py  head.py  lift.py  task_engine.py  vr.py  waist.py
app/safety/: __init__.py
app/schemas/: __init__.py  auth.py  response.py  robot.py  task.py
arm64/control_plane/: pyproject.toml  requirements.txt
arm64/control_plane/app/services/: preset_manager.py
arm64/data_plane/config/: config.yaml
control_plane/: .env.example  README.md  TODO.md  requirements.txt
control_plane/app/: __init__.py  config.py  database.py  dependencies.py  main.py
control_plane/app/api/: __init__.py  health.py
control_plane/app/api/v1/: __init__.py  actions.py  arm.py  audit.py  auth.py  camera.py  chassis.py  control.py  emergency.py  gripper.py  led.py  lift.py  mode.py  presets.py  recording.py  robot.py  router.py  system.py  tasks.py  vr.py  waist.py
control_plane/app/core/: __init__.py  control_lock.py  mode_manager.py  security.py
control_plane/app/models/: __init__.py  audit_log.py  control_session.py  preset.py  task.py  user.py
control_plane/app/schemas/: __init__.py  action.py  audit.py  auth.py  control.py  mode.py  preset.py  recording.py  response.py  robot.py  system.py  task.py
control_plane/app/services/: __init__.py  audit_service.py  control_session_service.py  health_checker.py  preset_manager.py  ros2_client.py
data_plane/: CMakeLists.txt  README.md  TODO.md  build.sh  package.xml
data_plane/config/: config.yaml
data_plane/include/data_plane/: auth.hpp  chassis_manual.hpp  config.hpp  connection_manager.hpp  control_sync.hpp  imu_tf_led.hpp  logger.hpp  message_handler.hpp  metrics.hpp  performance.hpp  rate_limiter.hpp  ros2_bridge.hpp  server.hpp  session.hpp  state_cache.hpp  vr_session.hpp  watchdog.hpp
data_plane/src/: auth.cpp  config.cpp  connection_manager.cpp  control_sync.cpp  main.cpp  message_handler.cpp  rate_limiter.cpp  ros2_bridge.cpp  server.cpp  session.cpp  state_cache.cpp  vr_session.cpp  watchdog.cpp
deploy/: install.sh  ros_entrypoint.sh
deploy/systemd/: environment  qyh-control-plane.service  qyh-data-plane.service  qyh-media-plane.service
media_plane/: BUILD.md  CMakeLists.txt  README.md  TODO.md  build.sh  package.xml
media_plane/config/: config.yaml
media_plane/include/media_plane/: auth.hpp  config.hpp  media_server.hpp  pipeline_manager.hpp  ros2_image_source.hpp  signaling_server.hpp  webrtc_peer.hpp
media_plane/src/: auth.cpp  config.cpp  main.cpp  media_server.cpp  pipeline_manager.cpp  ros2_image_source.cpp  signaling_server.cpp  webrtc_peer.cpp
old_backup/: .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  start.sh
old_backup/app/: config.py  database.py
old_backup/app/api/: actions.py  auth.py  chassis.py  chassis_manual.py  head.py  head_points.py  led.py  lift.py  preset.py  recording.py  robot.py  shutdown.py  task_orchestration.py  waist.py  websocket.py
old_backup/app/core/: control_lock.py  security.py  task_runner.py
old_backup/app/models/: audit_log.py  recording.py  task.py
old_backup/app/preset/: manager.py  models.py
old_backup/app/ros2_bridge/components/: chassis.py  gripper.py
old_backup/app/safety/: watchdog.py
robot_endpoint/: CMakeLists.txt
robot_endpoint/config/: config.yaml
robot_endpoint/include/robot_endpoint/: config.hpp  data_channel_manager.hpp  media_pipeline.hpp  ros2_bridge.hpp  ros2_control_state.hpp  signaling_client.hpp  webrtc_peer.hpp  webrtc_session.hpp
robot_endpoint/src/: config.cpp  data_channel_manager.cpp  main.cpp  media_pipeline.cpp  ros2_bridge.cpp  ros2_control_state.cpp  ros2_control_state_basic.cpp  ros2_control_state_control.cpp  ros2_control_state_impl.hpp  ros2_control_state_robot.cpp  ros2_control_state_state.cpp  signaling_client.cpp  webrtc_peer.cpp  webrtc_session.cpp
shared/proto/: control.proto  control_channel.proto  event.proto  signaling.proto  state.proto  state_channel.proto
signaling_server/: requirements.txt
signaling_server/app/: config.py  database.py  dependencies.py  main.py
signaling_server/app/api/v1/: actions.py  auth.py  control.py  preset.py  recording.py  robots.py  session.py  signaling.py  task_orchestration.py  tasks.py
signaling_server/app/core/: control_lock.py  paths.py  robot_registry.py  security.py  session_manager.py
signaling_server/app/models/: __init__.py  user.py
signaling_server/app/safety/: __init__.py  watchdog.py
signaling_server/app/services/: signaling_relay.py
