<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>qyh_media_plane</name>
    <version>2.0.0</version>
    <description>Media plane for QYH Jushen robot system - WebRTC video streaming</description>
    <maintainer email="dev@example.com">QYH Team</maintainer>
    <license>Proprietary</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
